# hope-logger

./: CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt
lib/hope_logger/: buffer.cpp  buffer.h  log_helper.cpp  log_helper.h  log_level.h  logger.cpp  logger.h  ofstream.cpp  ostream.h
lib/misc/: logger_mpmc_bounded_queue.h  logger_mpsc_queue.h
sample/: CMakeLists.txt  main.cpp
